2007-12-25  Rob Buis  <buis@kde.org>

        Reviewed by Eric.

        Testcases for:
        http://bugs.webkit.org/show_bug.cgi?id=15514
        <clipPath> with <use> not respected
        http://bugs.webkit.org/show_bug.cgi?id=16557
        SVG circle elements have been clipped away completely, instead of partially.

        * svg/custom/clip-path-referencing-use-expected.checksum: Added.
        * svg/custom/clip-path-referencing-use-expected.png: Added.
        * svg/custom/clip-path-referencing-use-expected.txt: Added.
        * svg/custom/clip-path-referencing-use.svg: Added.
        * svg/custom/clip-path-referencing-use2-expected.checksum: Added.
        * svg/custom/clip-path-referencing-use2-expected.png: Added.
        * svg/custom/clip-path-referencing-use2-expected.txt: Added.
        * svg/custom/clip-path-referencing-use2.svg: Added.

2007-12-25  David Smith  <catfish.man@gmail.com> and Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver.
        
        - http://bugs.webkit.org/show_bug.cgi?id=16587
        Implement the most useful part of the W3C Selectors API.

        * fast/dom/SelectorAPI: Copied from LayoutTests/fast/dom/getElementsByClassName.
        * fast/dom/SelectorAPI/dumpNodeList-expected.txt:
        * fast/dom/SelectorAPI/dumpNodeList.html: Modified to test querySelector and querySelectorAll instead of getElementsByClassName
        * fast/dom/Window/window-properties-expected.txt: Added querySelector and querySelectorAll

2007-12-23  Darin Adler  <darin@apple.com>

        - updated results (character used for controls changed in r28945)

        * platform/mac/media/audio-controls-rendering-expected.txt: Regenerated.
        * platform/mac/media/video-controls-rendering-expected.txt: Regenerated.
        * platform/mac/media/video-display-toggle-expected.txt: Regenerated.

2007-12-22  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Oliver.
