@@ -1,0 +1,5 @@
+<?php
+header('Content-Type: ');
+echo '<?'.'xml version="1.0" ?'.'>';
+echo '<root/>';
+?>
