@@ -1,0 +1,7 @@
+BUG ID: 4175734 Crash trying to retrieve data with XMLHttpRequest with Content-Type: empty
+
+STEPS TO TEST: None, the test is automatic.
+
+TEST PASS: No crash.
+
+TEST FAIL: Crash.
