@@ -7,7 +7,7 @@
 <p><b>BUG ID:</b> <a href="rdar://problem/4175734">4175734</a> Crash trying to retrieve data with XMLHttpRequest with Content-Type: empty</p>
 
 <p id="test" style="background-color:skyblue; padding:3px;"><b>STEPS TO TEST:</b> 
-Click on the link below.  Sorry, but at the moment this test link can only be accessed if you're behind the Apple firewall.</p>
+None, the test is automatic.</p>
 
 <p id="success" style="background-color:palegreen; padding:3px;"><b>TEST PASS:</b> 
 No crash.
@@ -17,6 +17,23 @@ No crash.
 Crash.
 </p>
 
-<a href="http://jersey.apple.com/test/4175734/">Click this link</a>
+<script>
+  if (window.layoutTestController) {
+    layoutTestController.dumpAsText();
+    layoutTestController.waitUntilDone();
+  }
+
+  var xmlhttp = new XMLHttpRequest();
+  xmlhttp.open('GET','resources/empty-content-type.php');
+  xmlhttp.onreadystatechange = done;
+  xmlhttp.send(null);
+
+  function done() {
+    if (xmlhttp.readyState == 4) {
+      if (xmlhttp.responseXML.documentElement && window.layoutTestController)
+        layoutTestController.notifyDone();
+    }
+  }
+</script>
 </body>
 </html>
