@@ -1,3 +1,12 @@
+2007-12-26  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Sam Weinig.
+
+        http://bugs.webkit.org/show_bug.cgi?id=16609
+        Make manual-tests/xmlhttprequest-contenttype-empty.html test automatic
+
+        * manual-tests/xmlhttprequest-contenttype-empty.html: Removed (moved to LayoutTests/http).
+
 2007-12-26  Mark Rowe  <mrowe@apple.com>
 
         Windows build fix.
